# tap-googleads

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
tap_googleads/: _gaql.py  client.py  custom_query_stream.py  dynamic_query_stream.py  dynamic_streams.py  streams.py  tap.py
tap_googleads/dynamic_streams/: __init__.py  ad_group_ad.py  ad_group_ad_label.py  ad_group_criterion.py  ad_group_label.py  ad_groups.py  ad_groups_performance.py  ad_listing_group_criterion.py  audience.py  campaign_budget.py  campaign_criterion.py  campaign_label.py  campaign_performance.py  campaign_performance_by_age_range_and_device.py  campaign_performance_by_gender_and_device.py  campaign_performance_by_location.py  campaigns.py  click_view_report.py  customer_label.py  geo_performance.py  geotargets.py  user_interest.py
tap_googleads/tests/: test_base_credentials.py  test_gaql.py  test_proxy_oauth.py  utils.py
